Fixing slim hero image vertical alignment Solves #175

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -358,7 +358,6 @@
 
     @media(max-width: $asu-screen-md-max) {
       margin-bottom: 8px;
-      margin-top: 8px;
     }
 
     @media(max-width: $asu-screen-sm-max + 100) {
